2009-10-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/MonoDevelopStatusBar.cs: Ensure that the
	  child is removed in the event box, before set & dispose
	  gtk.images.

2009-10-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Handled an
	  exception that could happen, when the code completion
	  database is corrupted.

2009-10-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ProgressMonitors.cs: added focuspad
	  option for new search monitors.

2009-10-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ProgressMonitors.cs: Added grabFocus
	  option to GetSearchProgressMonitor.

2009-10-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/CommonAboutDialog.cs: Added
	  andrea to the about dialog.

2009-10-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplateService.cs: Fix
	  infinite recursion that hung MD on ctrl-space in
	  XML/HTML/ASP.NET files.

2009-10-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Added some strings
	  to the translation database.

2009-10-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/MonoDevelopStatusBar.cs: fixed typo

2009-10-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/MonoDevelopStatusBar.cs: Fixed tooltip.

2009-10-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/MonoDevelopStatusBar.cs: No longer set
	  status texts if they're not updated (=> fewer expose
	  events). 

2009-10-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs:
	  Save the solution after changing the startup project. Fixes
	  bug #542054 - MonoDevelop does not remember 'startup
	  project'.

2009-10-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/RootWorkspace.cs:
	* MonoDevelop.Ide.Gui/ProjectOperations.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/SolutionNodeBuilder.cs: